# CppStudy

./: CMakeLists.txt  README.md
codes/: Amber.cpp  Entity.cpp  test.cpp
codes/include/: Amber.h  Entity.h
